[+] Mark Continuous Pre-Release

--- a/.github/workflows/build_on_nix.yaml
+++ b/.github/workflows/build_on_nix.yaml
@@ -325,7 +325,7 @@ jobs:
         with:
           name: "util-linux-@latest"
           tag_name: "continuous"
-          prerelease: false
+          prerelease: true
           draft: false
           generate_release_notes: false
           body_path: "/tmp/RELEASE_NOTE.md"
